# kanshi

./: .build.yml  .gitignore  Cargo.toml  LICENSE  README.md  ctl.c  event-loop.c  ipc-addr.c  ipc.c  kanshi.1.scd  kanshi.5.scd  kanshictl.1.scd  main.c  meson.build  meson_options.txt  parser.c
include/: config.h  ipc.h  kanshi.h  parser.h
protocol/: meson.build
src/: backend.rs  frontend.rs  main.rs  notifier.rs  store.rs
