[package]
name = "kanshi"
version = "0.2.1"
description = "Dynamic display configuration"
homepage = "https://github.com/emersion/kanshi"
repository = "https://github.com/emersion/kanshi"
readme = "README.md"
license = "MIT"
authors = ["emersion"]

[dependencies]
edid = "0.2.0"
getopts = "0.2.14"
i3ipc = { git = "https://github.com/emersion/i3ipc-rs", branch = "sway" }
libudev = "0.2"
xmltree = "0.4.0"

[dependencies.nom]
version = "3.2.0"
features = ["verbose-errors"]
