[package]
name = "kanshi"
version = "0.2.1"
description = "Dynamic display configuration"
homepage = "https://github.com/emersion/kanshi"
repository = "https://github.com/emersion/kanshi"
readme = "README.md"
license = "MIT"
authors = ["emersion"]

[dependencies]
edid = "0.2.0"
getopts = "0.2.18"
i3ipc = "0.8.4"
libudev = "0.2"
xmltree = "0.8.0"

[dependencies.nom]
version = "3.2.1"
features = ["verbose-errors"]
